--- a/styles/style_medium.css
+++ b/styles/style_medium.css
@@ -30,6 +30,11 @@
     font-family: 'crimson text', serif;
   }
 
+  .required-p {
+    font-weight: bold;
+    font-size: 14pt;
+  }
+
   .main-image{
     width: 100%;
   }
